--- a/TROUBLESHOOTING.Rmd
+++ b/TROUBLESHOOTING.Rmd
@@ -1,39 +1,48 @@
-Troubleshooting
-================
+---
+title: "Troubleshooting"
+output: github_document
+---
 
 <!-- README.md is generated from README.Rmd. Please edit that file -->
+
+```{r, include = FALSE}
+knitr::opts_chunk$set(
+  collapse = TRUE,
+  comment = "#>",
+  fig.path = "man/figures/README-",
+  out.width = "100%"
+)
+```
 
 ## Installing the package
 
 ### Dependencies
 
-If the `nloptr` dependency does not install and your working on a
-linux-based system please install `nlopt`.
+If the `nloptr` dependency does not install and your working on a linux-based system please install `nlopt`.
 
 For CentOS
 
-``` bash
+```bash
 yum install nlopt nlopt-devel
 ```
 
 For Ubuntu
 
-``` bash
+```bash
 apt-get install libnlopt-dev
 ```
 
 For Mac
 
-``` bash
+```bash
 brew install nlopt
 ```
 
 ### Tidyr/CPP 11 install error
 
-If you get an error when trying to install tidyr, run the following
-lines of code:
+If you get an error when trying to install tidyr, run the following lines of code:
 
-``` r
+```R
 remove.packages("tidyr")
 remove.packages("cpp11")
 library(remotes)
