fix: generated README and removed remote=TRUE from checks

--- a/README.Rmd
+++ b/README.Rmd
@@ -13,7 +13,7 @@ knitr::opts_chunk$set(
 ```
 
 [![CRAN status](https://www.r-pkg.org/badges/version/dsHelper)](https://CRAN.R-project.org/package=dsHelper)
-[![Codecov test coverage](https://codecov.io/gh/lifecycle-project/ds-helper/branch/master/graph/badge.svg)](https://codecov.io/gh/lifecycle-project/ds-helper?branch=master)
+[![Codecov test coverage](https://app.codecov.io/gh/lifecycle-project/ds-helper/branch/master/graph/badge.svg)](https://app.codecov.io/gh/lifecycle-project/ds-helper?branch=master)
 
 This is a set of functions to automate processes in 'DataSHIELD' to make data
 manipulation and analysis easier. They are very much a work in progress! If you 
