--- a/README.Rmd
+++ b/README.Rmd
@@ -14,7 +14,7 @@ knitr::opts_chunk$set(
 
 [![CRAN status](https://www.r-pkg.org/badges/version/dsHelper)](https://CRAN.R-project.org/package=dsHelper)
 [![Codecov test coverage](https://codecov.io/gh/lifecycle-project/ds-helper/branch/master/graph/badge.svg)](https://app.codecov.io/gh/lifecycle-project/ds-helper?branch=master)
-[![Build Status](https://dev.azure.com/sidohaakma/datashield-packages/_apis/build/status/lifecycle-project.ds-helper?branchName=master)](https://dev.azure.com/sidohaakma/datashield-packages/_build/latest?definitionId=4&branchName=master)
+[![Build Status](https://dev.azure.com/sidohaakma/datashield-packages/_apis/build/status/lifecycle-project.ds-helper?branchName=master)](https://dev.azure.com/sidohaakma/datashield-packages/_apis/build/status/lifecycle-project.ds-helper?branchName=master)
 
 This is a set of functions to automate processes in 'DataSHIELD' to make data
 manipulation and analysis easier. They are very much a work in progress! If you 
