--- a/vignettes/ds-helper-main-vignette.Rmd
+++ b/vignettes/ds-helper-main-vignette.Rmd
@@ -38,10 +38,6 @@ library(DSMolgenisArmadillo)
 library(tidyverse)
 ```
 
-```
-## Error in library(tidyverse): there is no package called 'tidyverse'
-```
-
 # Data: simulated data based on LifeCycle variables
 To demonstrate these functions we will use remote simulated data for three 
 cohorts: ALSPAC, BCG & BiB.
@@ -83,8 +79,25 @@ profile = "xenon")
 logindata <- builder$build()
 
 conns <- DSI::datashield.login(logins = logindata, assign = TRUE, symbol = "data")
+```
 
+
+```r
 ds.colnames("data")
+```
+
+```
+## $alspac
+## [1] "id"                 "age"                "sex"                "ethnicity"          "father_socialclass" "mother_education"  
+## [7] "weight"            
+## 
+## $bcg
+## [1] "id"                 "age"                "sex"                "ethnicity"          "father_socialclass" "mother_education"  
+## [7] "weight"            
+## 
+## $bib
+## [1] "id"                 "age"                "sex"                "ethnicity"          "father_socialclass" "mother_education"  
+## [7] "weight"
 ```
 
 # Data manipulation functions
@@ -100,8 +113,21 @@ dh.renameVars(
   df = "data",
   current_names = c("ethnicity", "father_socialclass"), 
   new_names = c("race", "paternal_class"))
+```
 
+```r
 ds.colnames("data")
+```
+
+```
+## $alspac
+## [1] "id"               "age"              "sex"              "mother_education" "weight"           "race"             "paternal_class"  
+## 
+## $bcg
+## [1] "id"               "age"              "sex"              "mother_education" "weight"           "race"             "paternal_class"  
+## 
+## $bib
+## [1] "id"               "age"              "sex"              "mother_education" "weight"           "race"             "paternal_class"
 ```
 
 ## Removing columns with dh.dropCols()
@@ -114,8 +140,21 @@ dh.dropCols(
   df = "data", 
   vars = "mother_education", 
   type = "remove")
+```
 
+```r
 ds.colnames("data")
+```
+
+```
+## $alspac
+## [1] "id"             "age"            "sex"            "weight"         "race"           "paternal_class"
+## 
+## $bcg
+## [1] "id"             "age"            "sex"            "weight"         "race"           "paternal_class"
+## 
+## $bib
+## [1] "id"             "age"            "sex"            "weight"         "race"           "paternal_class"
 ```
 
 Alternatively, we can just to keep certain columns and remove everything else.
@@ -126,8 +165,21 @@ dh.dropCols(
   df = "data", 
   vars = c("id", "age", "sex", "weight"), 
   type = "keep")
+```
 
+```r
 ds.colnames("data")
+```
+
+```
+## $alspac
+## [1] "id"     "age"    "sex"    "weight"
+## 
+## $bcg
+## [1] "id"     "age"    "sex"    "weight"
+## 
+## $bib
+## [1] "id"     "age"    "sex"    "weight"
 ```
 
 ## Creating strata of a variable with dh.makeStrata()
@@ -166,19 +218,19 @@ dh.makeStrata(
   new_obj = "height_data")
 ```
 
-```
-## Error in `pmap()`:
-## ℹ In index: 1.
-## Caused by error:
-## ! There are some DataSHIELD errors, list them with datashield.errors()
-```
-
 ```r
 ds.colnames("height_data")
 ```
 
 ```
-## Error: There are some DataSHIELD errors, list them with datashield.errors()
+## $alspac
+## [1] "id"          "tmp_obj"     "weight.4_6"  "weight.7_10" "age.4_6"     "age.7_10"   
+## 
+## $bcg
+## [1] "id"         "tmp_obj"    "weight.4_6" "age.4_6"   
+## 
+## $bib
+## [1] "id"          "tmp_obj"     "weight.4_6"  "weight.7_10" "age.4_6"     "age.7_10"
 ```
 
 The created dataset contains 5 variables: the id variable, two variables
@@ -198,16 +250,19 @@ ds.merge(
   newobj = "data")
 ```
 
-```
-## Error: There are some DataSHIELD errors, list them with datashield.errors()
-```
-
 ```r
 ds.colnames("data")
 ```
 
 ```
-## Error: There are some DataSHIELD errors, list them with datashield.errors()
+## $alspac
+## [1] "id"          "age"         "sex"         "weight"      "tmp_obj"     "weight.4_6"  "weight.7_10" "age.4_6"     "age.7_10"   
+## 
+## $bcg
+## [1] "id"         "age"        "sex"        "weight"     "tmp_obj"    "weight.4_6" "age.4_6"   
+## 
+## $bib
+## [1] "id"          "age"         "sex"         "weight"      "tmp_obj"     "weight.4_6"  "weight.7_10" "age.4_6"     "age.7_10"
 ```
 
 ## Transforming continuous variable to interquartile range using dh.makeIQR()
@@ -234,24 +289,64 @@ dh.makeIQR(
   new_obj = "data")
 ```
 
-```
-## Error: There are some DataSHIELD errors, list them with datashield.errors()
-```
 
 ```r
 ds.colnames("data")
 ```
 
 ```
-## Error: There are some DataSHIELD errors, list them with datashield.errors()
+## $alspac
+##  [1] "id"           "age"          "sex"          "weight"       "tmp_obj"      "weight.4_6"   "weight.7_10"  "age.4_6"     
+##  [9] "age.7_10"     "weight_iqr_s"
+## 
+## $bcg
+## [1] "id"           "age"          "sex"          "weight"       "tmp_obj"      "weight.4_6"   "age.4_6"      "weight_iqr_s"
+## 
+## $bib
+##  [1] "id"           "age"          "sex"          "weight"       "tmp_obj"      "weight.4_6"   "weight.7_10"  "age.4_6"     
+##  [9] "age.7_10"     "weight_iqr_s"
 ```
+
 
 ```r
 ds.summary("data$weight_iqr_s")
 ```
 
 ```
-## Error: There are some DataSHIELD errors, list them with datashield.errors()
+## $alspac
+## $alspac$class
+## [1] "numeric"
+## 
+## $alspac$length
+## [1] 129681
+## 
+## $alspac$`quantiles & mean`
+##        5%       10%       25%       50%       75%       90%       95%      Mean 
+## 0.4091894 0.4749404 0.8753985 1.9270502 4.0167522 5.8588743 6.8073844 2.6408378 
+## 
+## 
+## $bcg
+## $bcg$class
+## [1] "numeric"
+## 
+## $bcg$length
+## [1] 12724
+## 
+## $bcg$`quantiles & mean`
+##        5%       10%       25%       50%       75%       90%       95%      Mean 
+## 0.4297604 0.4883779 0.6827643 1.2218283 1.6454341 1.9312762 2.0859876 1.2049523 
+## 
+## 
+## $bib
+## $bib$class
+## [1] "numeric"
+## 
+## $bib$length
+## [1] 68864
+## 
+## $bib$`quantiles & mean`
+##        5%       10%       25%       50%       75%       90%       95%      Mean 
+## 0.3423285 0.3857788 0.4784658 0.7840827 1.4784658 1.9096193 2.1163471 0.9941187
 ```
 
 ## Removing objects from workspace using dh.tidyEnv()
@@ -267,19 +362,34 @@ dh.tidyEnv(
   type = "keep")
 ```
 
-```
-## Error in `map()`:
-## ℹ In index: 1.
-## Caused by error:
-## ! There are some DataSHIELD errors, list them with datashield.errors()
-```
 
 ```r
 ds.ls()
 ```
 
 ```
-## Error: There are some DataSHIELD errors, list them with datashield.errors()
+## $alspac
+## $alspac$environment.searched
+## [1] "R_GlobalEnv"
+## 
+## $alspac$objects.found
+## [1] "data"
+## 
+## 
+## $bcg
+## $bcg$environment.searched
+## [1] "R_GlobalEnv"
+## 
+## $bcg$objects.found
+## [1] "data"
+## 
+## 
+## $bib
+## $bib$environment.searched
+## [1] "R_GlobalEnv"
+## 
+## $bib$objects.found
+## [1] "data"
 ```
 
 ## Identifying column indices using dh.findVarsIndex
@@ -293,14 +403,25 @@ identify the column numbers of a vector of column names, like so:
 
 
 ```r
-dh.findVarsIndex(
+indices <- dh.findVarsIndex(
   df = "data",
-  vars = c("sex", "age", "weight")
-)
+  vars = c("sex", "age", "weight"))
+```
+
+
+```r
+indices
 ```
 
 ```
-## Error: There are some DataSHIELD errors, list them with datashield.errors()
+## $alspac
+## [1] 2 3 4
+## 
+## $bcg
+## [1] 2 3 4
+## 
+## $bib
+## [1] 2 3 4
 ```
 
 # Describing data
@@ -316,30 +437,38 @@ Here we describe multiple variables using dh.getStats():
 
 
 ```r
-test <- dh.getStats(
+stats <- dh.getStats(
   df = "data",
   vars = c("age", "sex", "weight")
 )
 ```
 
-```
-## Error: There are some DataSHIELD errors, list them with datashield.errors()
-```
-
 ```r
-ds.colnames("data")
+stats
 ```
 
 ```
-## Error: There are some DataSHIELD errors, list them with datashield.errors()
-```
-
-```r
-test$categorical %>% select(variable, cohort, valid_n, missing_n, perc_missing)
-```
-
-```
-## Error in test$categorical %>% select(variable, cohort, valid_n, missing_n, : could not find function "%>%"
+## $categorical
+## # A tibble: 0 × 10
+## # ℹ 10 variables: variable <chr>, cohort <chr>, category <chr>, value <dbl>, cohort_n <int>, valid_n <dbl>, missing_n <dbl>,
+## #   perc_valid <dbl>, perc_missing <dbl>, perc_total <dbl>
+## 
+## $continuous
+## # A tibble: 12 × 15
+##    variable cohort    mean std.dev perc_5 perc_10 perc_25 perc_50 perc_75 perc_90 perc_95 valid_n cohort_n missing_n missing_perc
+##    <chr>    <chr>    <dbl>   <dbl>  <dbl>   <dbl>   <dbl>   <dbl>   <dbl>   <dbl>   <dbl>   <dbl>    <dbl>     <dbl>        <dbl>
+##  1 age      alspac    6.2     5.53   0       0.1     0.83    4.52   10.8    13.9    15.7   129681   129681         0            0
+##  2 age      bcg       2.01    1.67   0       0.12    0.5     1.52    3.51    4.53    4.99   12724    12724         0            0
+##  3 age      bib       1.48    1.74   0       0       0.08    0.71    2.11    4.72    4.98   68864    68864         0            0
+##  4 sex      alspac    0.49    0.5    0       0       0       0       1       1       1     129681   129681         0            0
+##  5 sex      bcg       0.48    0.5    0       0       0       0       1       1       1      12724    12724         0            0
+##  6 sex      bib       0.49    0.5    0       0       0       0       1       1       1      68864    68864         0            0
+##  7 weight   alspac   25.3    20.2    3.93    4.56    8.4    18.5    38.5    56.2    65.3   129681   129681         0            0
+##  8 weight   bcg      11.6     5.29   4.12    4.69    6.55   11.7    15.8    18.5    20.0    12724    12724         0            0
+##  9 weight   bib       9.54    5.81   3.28    3.7     4.59    7.52   14.2    18.3    20.3    68864    68864         0            0
+## 10 age      combined  4.41    5.01   0       0.07    0.57    3.1     7.55   10.4    11.6   211269   211269         0            0
+## 11 sex      combined  0.49    0.5    0       0       0       0       1       1       1     211269   211269         0            0
+## 12 weight   combined 19.4    17.9    3.73    4.29    7.05   14.5    29.2    41.6    47.9   211269   211269         0            0
 ```
 
 The output is a list of two tibbles, corresponding to categorical and continuous
@@ -355,29 +484,12 @@ models and will also return summaries of random effects.
 
 ```r
 output <- ds.glm(formula = "weight~age", data = "data", family = "gaussian")
-```
 
-```
-## Error: There are some DataSHIELD errors, list them with datashield.errors()
-```
-
-```r
 dh.lmTab(
   model = output, 
   type = "glm_ipd", 
   direction = "wide", 
   ci_format  = "separate")
-```
-
-```
-## Error: Assertion on 'model' failed. function (msg) 
-## msgs <<- c(msgs, msg).
-
-## Error: Assertion on 'model' failed. function () 
-## msgs.
-
-## Error: Assertion on 'model' failed. function () 
-## length(msgs) == 0.
 ```
 
 For manuscripts we may want to include confidence intervals in brackets after
@@ -393,14 +505,11 @@ dh.lmTab(
 ```
 
 ```
-## Error: Assertion on 'model' failed. function (msg) 
-## msgs <<- c(msgs, msg).
-
-## Error: Assertion on 'model' failed. function () 
-## msgs.
-
-## Error: Assertion on 'model' failed. function () 
-## length(msgs) == 0.
+## # A tibble: 2 × 5
+##   variable  est                 se pvalue  n_obs
+##   <chr>     <chr>            <dbl>  <dbl>  <int>
+## 1 intercept 4.36 (4.32,4.39)  0.02      0 211269
+## 2 age       3.4 (3.4,3.41)    0         0 211269
 ```
 
 ## Checking class of data using dh.classDiscrepancy()
@@ -416,11 +525,28 @@ whether there are differences across studies.
 
 
 ```r
-dh.classDiscrepancy(df = "data")
+disc <- dh.classDiscrepancy(df = "data")
+```
+
+
+```r
+disc
 ```
 
 ```
-## Error: There are some DataSHIELD errors, list them with datashield.errors()
+## # A tibble: 10 × 5
+##    variable     discrepancy alspac  bcg     bib    
+##    <chr>        <chr>       <chr>   <chr>   <chr>  
+##  1 id           no          numeric numeric numeric
+##  2 age          no          numeric numeric numeric
+##  3 sex          no          numeric numeric numeric
+##  4 weight       no          numeric numeric numeric
+##  5 tmp_obj      no          numeric numeric numeric
+##  6 weight.4_6   no          numeric numeric numeric
+##  7 weight.7_10  yes         numeric NULL    numeric
+##  8 age.4_6      no          numeric numeric numeric
+##  9 age.7_10     yes         numeric NULL    numeric
+## 10 weight_iqr_s no          numeric numeric numeric
 ```
 
 ## Checking non-missing data using dh.anyData()
@@ -430,14 +556,22 @@ cohortsh have at least some data on given variables.
 
 
 ```r
-dh.anyData(
+available <- dh.anyData(
   df = "data",
-  vars = c("age", "sex", "weight")
-)
+  vars = c("age", "sex", "weight"))
+```
+
+```r
+available
 ```
 
 ```
-## Error: There are some DataSHIELD errors, list them with datashield.errors()
+## # A tibble: 3 × 4
+##   variable alspac bcg   bib  
+##   <chr>    <lgl>  <lgl> <lgl>
+## 1 age      TRUE   TRUE  TRUE 
+## 2 sex      TRUE   TRUE  TRUE 
+## 3 weight   TRUE   TRUE  TRUE
 ```
 
 # Creating a dataset for analysis using dh.defineCases()
@@ -455,20 +589,22 @@ dh.defineCases(
   new_obj = "data_on_all_vars")
 ```
 
+```r
+cases_all <- ds.table("data_on_all_vars")$output.list$TABLE_rvar.by.study_counts
 ```
-## Error in `map()`:
-## ℹ In index: 1.
-## Caused by error:
-## ! There are some DataSHIELD errors, list them with datashield.errors()
-```
+
 
 ```r
-ds.table("data_on_all_vars")$output.list$TABLE_rvar.by.study_counts
+cases_all
 ```
 
 ```
-## Error: There are some DataSHIELD errors, list them with datashield.errors()
+##                 study
+## data_on_all_vars alspac   bcg   bib
+##               1  129681 12724 68864
+##               NA      0     0     0
 ```
+
 The data we have here is not the best to illustrate this function, as 
 there is no missing data.
 
@@ -483,20 +619,22 @@ dh.defineCases(
   new_obj = "data_on_any_vars")
 ```
 
+```r
+cases_any <- ds.table("data_on_any_vars")$output.list$TABLE_rvar.by.study_counts
 ```
-## Error in `map()`:
-## ℹ In index: 1.
-## Caused by error:
-## ! There are some DataSHIELD errors, list them with datashield.errors()
-```
+
 
 ```r
-ds.table("data_on_any_vars")$output.list$TABLE_rvar.by.study_counts
+ cases_any
 ```
 
 ```
-## Error: There are some DataSHIELD errors, list them with datashield.errors()
+##                 study
+## data_on_any_vars alspac   bcg   bib
+##               1  129681 12724 68864
+##               NA      0     0     0
 ```
+
 Again, we can't see the differences because all subjects have data on all
 variables. However, lets assume that we want to create an subset of our data
 restricted to participants with data on at least one of these variables. We 
@@ -506,16 +644,42 @@ can then use ds.dataFrameSubset in conjuncture with the vector we created:
 ```r
 ds.dataFrameSubset(
   df.name = "data", 
-  V1.name = "data_on_any_vars", 
+  V1.name = "data_on_all_vars", 
   V2.name = "1", 
   Boolean.operator = "==", 
-  newobj = "analysis_df")
+  newobj = "complete_df")
+```
+
+```r
+ds.dim("data")
+ds.dim("complete_df")
 ```
 
 ```
-## Error: There are some DataSHIELD errors, list them with datashield.errors()
+## $`dimensions of data in alspac`
+## [1] 129681     10
+## 
+## $`dimensions of data in bcg`
+## [1] 12724     8
+## 
+## $`dimensions of data in bib`
+## [1] 68864    10
+## 
+## $`dimensions of data in combined studies`
+## [1] 211269     10
+## 
+## $`dimensions of complete_df in alspac`
+## [1] 129681     10
+## 
+## $`dimensions of complete_df in bcg`
+## [1] 12724     8
+## 
+## $`dimensions of complete_df in bib`
+## [1] 68864    10
+## 
+## $`dimensions of complete_df in combined studies`
+## [1] 211269     10
 ```
-
 
 # Miscellaneous functions
 
@@ -531,10 +695,6 @@ data frame "data" should now be available.
 
 ```r
 dh.localProxy(df = "data", conns = conns)
-```
-
-```
-## Error: There are some DataSHIELD errors, list them with datashield.errors()
 ```
 
 ## Manually pooling estimates by meta-analysis
@@ -555,10 +715,6 @@ output <- ds.glmSLMA(
   family = "gaussian")
 ```
 
-```
-## Error: There are some DataSHIELD errors, list them with datashield.errors()
-```
-
 Now we can use this object and to the meta-analysis manually:
 
 
@@ -577,10 +733,248 @@ meta-analysed:
 str(meta_analysed$model)
 ```
 
+```
+## List of 2
+##  $ (Intercept):List of 74
+##   ..$ b           : num [1, 1] 4.91
+##   .. ..- attr(*, "dimnames")=List of 2
+##   .. .. ..$ : chr "intrcpt"
+##   .. .. ..$ : NULL
+##   ..$ beta        : num [1, 1] 4.91
+##   .. ..- attr(*, "dimnames")=List of 2
+##   .. .. ..$ : chr "intrcpt"
+##   .. .. ..$ : NULL
+##   ..$ se          : num 0.415
+##   ..$ zval        : num 11.8
+##   ..$ pval        : num 3.03e-32
+##   ..$ ci.lb       : num 4.09
+##   ..$ ci.ub       : num 5.72
+##   ..$ vb          : num [1, 1] 0.172
+##   .. ..- attr(*, "dimnames")=List of 2
+##   .. .. ..$ : chr "intrcpt"
+##   .. .. ..$ : chr "intrcpt"
+##   ..$ tau2        : num 0.516
+##   ..$ se.tau2     : num 0.422
+##   ..$ tau2.fix    : logi FALSE
+##   ..$ tau2.f      : num 0.516
+##   ..$ I2          : num 99.9
+##   ..$ H2          : num 994
+##   ..$ R2          : NULL
+##   ..$ vt          : num 0.000519
+##   ..$ QE          : num 1753
+##   ..$ QEp         : num 0
+##   ..$ QM          : num 140
+##   ..$ QMdf        : int [1:2] 1 NA
+##   ..$ QMp         : num 3.03e-32
+##   ..$ k           : int 3
+##   ..$ k.f         : int 3
+##   ..$ k.eff       : int 3
+##   ..$ k.all       : int 3
+##   ..$ p           : int 1
+##   ..$ p.eff       : int 1
+##   ..$ parms       : num 2
+##   ..$ int.only    : logi TRUE
+##   ..$ int.incl    : logi TRUE
+##   ..$ intercept   : logi TRUE
+##   ..$ allvipos    : logi TRUE
+##   ..$ coef.na     : Named logi FALSE
+##   .. ..- attr(*, "names")= chr "X"
+##   ..$ yi          : Named num [1:3] 4.02 5.78 4.92
+##   .. ..- attr(*, "names")= chr [1:3] "betas study 1" "betas study 2" "betas study 3"
+##   .. ..- attr(*, "measure")= chr "GEN"
+##   .. ..- attr(*, "slab")= int [1:3] 1 2 3
+##   ..$ vi          : Named num [1:3] 0.000819 0.000964 0.000108
+##   .. ..- attr(*, "names")= chr [1:3] "ses study 1" "ses study 2" "ses study 3"
+##   ..$ X           : num [1:3, 1] 1 1 1
+##   .. ..- attr(*, "dimnames")=List of 2
+##   .. .. ..$ : NULL
+##   .. .. ..$ : chr "intrcpt"
+##   ..$ weights     : NULL
+##   ..$ yi.f        : Named num [1:3] 4.02 5.78 4.92
+##   .. ..- attr(*, "names")= chr [1:3] "betas study 1" "betas study 2" "betas study 3"
+##   .. ..- attr(*, "measure")= chr "GEN"
+##   .. ..- attr(*, "slab")= int [1:3] 1 2 3
+##   ..$ vi.f        : Named num [1:3] 0.000819 0.000964 0.000108
+##   .. ..- attr(*, "names")= chr [1:3] "ses study 1" "ses study 2" "ses study 3"
+##   ..$ X.f         : num [1:3, 1] 1 1 1
+##   .. ..- attr(*, "dimnames")=List of 2
+##   .. .. ..$ : NULL
+##   .. .. ..$ : chr "intrcpt"
+##   ..$ weights.f   : NULL
+##   ..$ M           : num [1:3, 1:3] 0.517 0 0 0 0.517 ...
+##   ..$ outdat.f    :List of 8
+##   .. ..$ ai : num NA
+##   .. ..$ bi : num NA
+##   .. ..$ ci : num NA
+##   .. ..$ di : num NA
+##   .. ..$ x1i: num NA
+##   .. ..$ x2i: num NA
+##   .. ..$ t1i: num NA
+##   .. ..$ t2i: num NA
+##   ..$ ni          : NULL
+##   ..$ ni.f        : NULL
+##   ..$ ids         : int [1:3] 1 2 3
+##   ..$ not.na      : Named logi [1:3] TRUE TRUE TRUE
+##   .. ..- attr(*, "names")= chr [1:3] "betas study 1" "betas study 2" "betas study 3"
+##   ..$ subset      : NULL
+##   ..$ slab        : int [1:3] 1 2 3
+##   ..$ slab.null   : logi TRUE
+##   ..$ measure     : chr "GEN"
+##   ..$ method      : chr "ML"
+##   ..$ model       : chr "rma.uni"
+##   ..$ weighted    : logi TRUE
+##   ..$ test        : chr "z"
+##   ..$ dfs         : int NA
+##   ..$ ddf         : int NA
+##   ..$ s2w         : num 1
+##   ..$ btt         : int 1
+##   ..$ m           : int 1
+##   ..$ digits      : Named num [1:9] 4 4 4 4 4 4 4 4 4
+##   .. ..- attr(*, "names")= chr [1:9] "est" "se" "test" "pval" ...
+##   ..$ level       : num 0.05
+##   ..$ control     : list()
+##   ..$ verbose     : logi FALSE
+##   ..$ add         : num 0.5
+##   ..$ to          : chr "only0"
+##   ..$ drop00      : logi FALSE
+##   ..$ fit.stats   :'data.frame':	5 obs. of  2 variables:
+##   .. ..$ ML  : num [1:5] -3.27 24.21 10.53 8.73 22.53
+##   .. ..$ REML: num [1:5] -2.68 5.36 9.36 6.74 21.36
+##   ..$ data        :<environment: 0x1624fe920> 
+##   ..$ formula.yi  : NULL
+##   ..$ formula.mods: NULL
+##   ..$ version     :Classes 'package_version', 'numeric_version'  hidden list of 1
+##   .. ..$ : int [1:3] 4 2 0
+##   ..$ call        : language rma(yi = model$betamatrix.valid[x, ], sei = model$sematrix.valid[x, ], method = "ML")
+##   ..$ time        : num 0.003
+##   ..- attr(*, "class")= chr [1:2] "rma.uni" "rma"
+##  $ age        :List of 74
+##   ..$ b           : num [1, 1] 3.14
+##   .. ..- attr(*, "dimnames")=List of 2
+##   .. .. ..$ : chr "intrcpt"
+##   .. .. ..$ : NULL
+##   ..$ beta        : num [1, 1] 3.14
+##   .. ..- attr(*, "dimnames")=List of 2
+##   .. .. ..$ : chr "intrcpt"
+##   .. .. ..$ : NULL
+##   ..$ se          : num 0.133
+##   ..$ zval        : num 23.6
+##   ..$ pval        : num 6.46e-123
+##   ..$ ci.lb       : num 2.88
+##   ..$ ci.ub       : num 3.41
+##   ..$ vb          : num [1, 1] 0.0178
+##   .. ..- attr(*, "dimnames")=List of 2
+##   .. .. ..$ : chr "intrcpt"
+##   .. .. ..$ : chr "intrcpt"
+##   ..$ tau2        : num 0.0533
+##   ..$ se.tau2     : num 0.0435
+##   ..$ tau2.fix    : logi FALSE
+##   ..$ tau2.f      : num 0.0533
+##   ..$ I2          : num 99.9
+##   ..$ H2          : num 1915
+##   ..$ R2          : NULL
+##   ..$ vt          : num 2.78e-05
+##   ..$ QE          : num 4454
+##   ..$ QEp         : num 0
+##   ..$ QM          : num 556
+##   ..$ QMdf        : int [1:2] 1 NA
+##   ..$ QMp         : num 6.46e-123
+##   ..$ k           : int 3
+##   ..$ k.f         : int 3
+##   ..$ k.eff       : int 3
+##   ..$ k.all       : int 3
+##   ..$ p           : int 1
+##   ..$ p.eff       : int 1
+##   ..$ parms       : num 2
+##   ..$ int.only    : logi TRUE
+##   ..$ int.incl    : logi TRUE
+##   ..$ intercept   : logi TRUE
+##   ..$ allvipos    : logi TRUE
+##   ..$ coef.na     : Named logi FALSE
+##   .. ..- attr(*, "names")= chr "X"
+##   ..$ yi          : Named num [1:3] 3.44 2.87 3.12
+##   .. ..- attr(*, "names")= chr [1:3] "betas study 1" "betas study 2" "betas study 3"
+##   .. ..- attr(*, "measure")= chr "GEN"
+##   .. ..- attr(*, "slab")= int [1:3] 1 2 3
+##   ..$ vi          : Named num [1:3] 1.19e-05 1.41e-04 2.07e-05
+##   .. ..- attr(*, "names")= chr [1:3] "ses study 1" "ses study 2" "ses study 3"
+##   ..$ X           : num [1:3, 1] 1 1 1
+##   .. ..- attr(*, "dimnames")=List of 2
+##   .. .. ..$ : NULL
+##   .. .. ..$ : chr "intrcpt"
+##   ..$ weights     : NULL
+##   ..$ yi.f        : Named num [1:3] 3.44 2.87 3.12
+##   .. ..- attr(*, "names")= chr [1:3] "betas study 1" "betas study 2" "betas study 3"
+##   .. ..- attr(*, "measure")= chr "GEN"
+##   .. ..- attr(*, "slab")= int [1:3] 1 2 3
+##   ..$ vi.f        : Named num [1:3] 1.19e-05 1.41e-04 2.07e-05
+##   .. ..- attr(*, "names")= chr [1:3] "ses study 1" "ses study 2" "ses study 3"
+##   ..$ X.f         : num [1:3, 1] 1 1 1
+##   .. ..- attr(*, "dimnames")=List of 2
+##   .. .. ..$ : NULL
+##   .. .. ..$ : chr "intrcpt"
+##   ..$ weights.f   : NULL
+##   ..$ M           : num [1:3, 1:3] 0.0533 0 0 0 0.0534 ...
+##   ..$ outdat.f    :List of 8
+##   .. ..$ ai : num NA
+##   .. ..$ bi : num NA
+##   .. ..$ ci : num NA
+##   .. ..$ di : num NA
+##   .. ..$ x1i: num NA
+##   .. ..$ x2i: num NA
+##   .. ..$ t1i: num NA
+##   .. ..$ t2i: num NA
+##   ..$ ni          : NULL
+##   ..$ ni.f        : NULL
+##   ..$ ids         : int [1:3] 1 2 3
+##   ..$ not.na      : Named logi [1:3] TRUE TRUE TRUE
+##   .. ..- attr(*, "names")= chr [1:3] "betas study 1" "betas study 2" "betas study 3"
+##   ..$ subset      : NULL
+##   ..$ slab        : int [1:3] 1 2 3
+##   ..$ slab.null   : logi TRUE
+##   ..$ measure     : chr "GEN"
+##   ..$ method      : chr "ML"
+##   ..$ model       : chr "rma.uni"
+##   ..$ weighted    : logi TRUE
+##   ..$ test        : chr "z"
+##   ..$ dfs         : int NA
+##   ..$ ddf         : int NA
+##   ..$ s2w         : num 1
+##   ..$ btt         : int 1
+##   ..$ m           : int 1
+##   ..$ digits      : Named num [1:9] 4 4 4 4 4 4 4 4 4
+##   .. ..- attr(*, "names")= chr [1:9] "est" "se" "test" "pval" ...
+##   ..$ level       : num 0.05
+##   ..$ control     : list()
+##   ..$ verbose     : logi FALSE
+##   ..$ add         : num 0.5
+##   ..$ to          : chr "only0"
+##   ..$ drop00      : logi FALSE
+##   ..$ fit.stats   :'data.frame':	5 obs. of  2 variables:
+##   .. ..$ ML  : num [1:5] 0.14 25.2 3.72 1.92 15.72
+##   .. ..$ REML: num [1:5] -0.407 0.814 4.814 2.201 16.814
+##   ..$ data        :<environment: 0x162481ce8> 
+##   ..$ formula.yi  : NULL
+##   ..$ formula.mods: NULL
+##   ..$ version     :Classes 'package_version', 'numeric_version'  hidden list of 1
+##   .. ..$ : int [1:3] 4 2 0
+##   ..$ call        : language rma(yi = model$betamatrix.valid[x, ], sei = model$sematrix.valid[x, ], method = "ML")
+##   ..$ time        : num 0.002
+##   ..- attr(*, "class")= chr [1:2] "rma.uni" "rma"
+```
+
 The second element ("coefficients") is a summary table:
 
 ```r
 meta_analysed$coefs
+```
+
+```
+## # A tibble: 2 × 3
+##   term         coef    se
+##   <chr>       <dbl> <dbl>
+## 1 (Intercept)  4.91 0.415
+## 2 age          3.14 0.133
 ```
 
 
